# Autoregressive-Models

./: .gitignore  README.md  pyproject.toml
configs/model/: GPT_124M.yaml
scr/: Attention.py  GPT.py  Norm.py  SequentialData.py  Transformer.py
test/: conftest.py  test_attention.py  test_gpt.py  test_transformer.py
