[project]
name = "autoregressive-models"
version = "0.1.0"
description = "关于深度自回归模型的实现，包括因果CNN，RNN，Transformer等"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "torch",
    "torchviz",
    "lightning",
    "torchmetrics",
    "optuna",
    "tensorboard",
    "datasets",
    "loguru",
    "einops",
]


[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "kaggle",
    "rich",
    "pytest",
    "tiktoken",
    "ruff",
]
